fixed spacing for remaining cases

--- a/DealorNoDeal.css
+++ b/DealorNoDeal.css
@@ -6,7 +6,7 @@ body {
 }
 
 p{
-  font-size: 18pt;
+  font-size: 17pt;
   font-family: 'Droid Sans Mono', monospace;
 }
 
